# elemental_wars

./: CMakeLists.txt
assets/: button.png.ini  farm.png.ini  frame.png.ini  frame2.png.ini  tiles.png.ini
cpp/: game.cpp
